--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ docs/content/references/sui-api/sui-graphql/*
 docs/content/references/framework/**
 
 lcov.info
+
+**/db/
+**/checkpoints/
+**/suidb/
