--- a/docker/sui-indexer/Dockerfile
+++ b/docker/sui-indexer/Dockerfile
@@ -3,7 +3,7 @@
 # Copy in all crates, Cargo.toml and Cargo.lock unmodified,
 # and build the application.
 FROM rust:1.75-bullseye AS builder
-ARG PROFILE=release
+# ARG PROFILE=release
 ARG GIT_REVISION
 ENV GIT_REVISION=$GIT_REVISION
 WORKDIR "$WORKDIR/sui"
@@ -13,14 +13,14 @@ RUN apt update && apt install -y libpq5 ca-certificates libpq-dev postgresql
 
 RUN apt-get update && apt-get install -y cmake clang
 
-COPY Cargo.toml Cargo.lock ./
-COPY consensus consensus
-COPY crates crates
-COPY sui-execution sui-execution
-COPY narwhal narwhal
-COPY external-crates external-crates
+COPY ../../Cargo.toml Cargo.lock ./
+COPY ../../consensus consensus
+COPY ../../crates crates
+COPY ../../sui-execution sui-execution
+COPY ../../narwhal narwhal
+COPY ../../external-crates external-crates
 
-RUN cargo build --profile ${PROFILE} --bin sui-indexer
+RUN cargo build --profile release --bin sui-indexer
 
 # Production Image
 FROM debian:bullseye-slim AS runtime
@@ -32,3 +32,12 @@ ARG BUILD_DATE
 ARG GIT_REVISION
 LABEL build-date=$BUILD_DATE
 LABEL git-revision=$GIT_REVISION
+
+# Copy the indexer.sh from the correct subdirectory
+COPY ./indexer.sh ./indexer.sh
+
+# Ensure the script is executable
+RUN chmod +x ./indexer.sh
+
+# Command to run when starting the container
+CMD ["./indexer.sh"]
