--- a/docker/fullnode-x/docker-compose.yaml
+++ b/docker/fullnode-x/docker-compose.yaml
@@ -35,8 +35,6 @@ services:
       context: ../..
       dockerfile: ./docker/sui-indexer/Dockerfile
     image: sui-indexer:latest
-    networks:
-      - networkName
     command: /opt/sui/indexer.sh
     restart: unless-stopped
     volumes:
@@ -46,6 +44,7 @@ services:
       - RUST_JSON_LOG="true"
       - DATABASE_URL=
       - RPC_CLIENT_URL=http://fullnode:9000
+      - EPOCHS_TO_KEEP=30
     ports:
       - target: 9000
         published: 9001
@@ -56,3 +55,26 @@ services:
     depends_on:
       - fullnode
 
+  # indexer-reader:
+  #   build:
+  #     context: ../..
+  #     dockerfile: ./docker/sui-indexer/Dockerfile
+  #   image: sui-indexer:latest
+  #   command: /opt/sui/indexer-reader.sh
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./indexer:/opt/sui
+  #   environment:
+  #     - RUST_LOG="info"
+  #     - RUST_JSON_LOG="true"
+  #     - DATABASE_URL=postgres://postgres:tonvyn-cyMvot-dybbo6@10.112.144.2:5432/sui_mainnet_indexer
+  #     - RPC_CLIENT_URL=http://fullnode:9000
+  #   ports:
+  #     - target: 9000
+  #       published: 9002
+  #       protocol: tcp
+  #     - target: 9184
+  #       published: 9186
+  #       protocol: tcp
+  #   depends_on:
+  #     - fullnode
